<resources>
    <string name="app_name">EverNote</string>
    <string name="mail_address">电子邮箱</string>
    <string name="password">密码</string>
    <string name="show_password">显示密码</string>
    <string name="start_use">开始使用印象笔记</string>
    <string name="terms_of_service">服务条款</string>
    <string name="privacy_policy">隐私条款</string>
    <string name="user_name">用户名或电子邮箱</string>
    <string name="login">登录</string>
    <string name="password_forget">忘记密码</string>
<<<<<<< HEAD


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>



    <string name="search_note">搜索笔记</string>

    <string name="accurate_search">精准搜索</string>
    <string name="note">笔记本</string>
    <string name="label">标签</string>
    <string name="date">日期</string>
    <string name="address">地点</string>
    <string name="source_type">来源和类型</string>
    <string name="attachment">附件</string>
    <string name="todo">待办事项</string>
    <string name="remove_the_filter">清除筛选条件</string>
    <string name="use_the_filter">使用筛选条件</string>
=======

    <string name="search_note">搜索笔记</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

>>>>>>> c76170d6588e2fb4193d09f888751a67c1c12872

</resources>
