<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/twenty_dp"
    android:background="@color/white">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accurate_search"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="找到1条笔记"
        android:layout_marginLeft="100dp"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginTop="@dimen/one_dp"
        android:background="@color/white"
        android:layout_marginRight="@dimen/ten_dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@mipmap/ic_options_done"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/ten_dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginTop="@dimen/one_dp"
        android:background="@color/white"
        android:layout_marginRight="@dimen/ten_dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@mipmap/ic_options_done"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label"
            android:layout_marginTop="@dimen/five_dp"
            android:layout_marginLeft="@dimen/ten_dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginTop="@dimen/one_dp"
        android:background="@color/white"
        android:layout_marginRight="@dimen/ten_dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@mipmap/ic_options_done"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginTop="@dimen/five_dp"
            android:layout_marginLeft="@dimen/ten_dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginTop="@dimen/one_dp"
        android:background="@color/white"
        android:layout_marginRight="@dimen/ten_dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@mipmap/ic_options_places"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginTop="@dimen/five_dp"
            android:layout_marginLeft="@dimen/ten_dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginTop="@dimen/one_dp"
        android:background="@color/white"
        android:layout_marginRight="@dimen/ten_dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@mipmap/ic_options_done"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source_type"
            android:layout_marginTop="@dimen/five_dp"
            android:layout_marginLeft="@dimen/ten_dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginTop="@dimen/one_dp"
        android:background="@color/white"
        android:layout_marginRight="@dimen/ten_dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@mipmap/icon_attach_enabled"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attachment"
            android:layout_marginTop="@dimen/five_dp"
            android:layout_marginLeft="@dimen/ten_dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginTop="@dimen/one_dp"
        android:background="@color/white"
        android:layout_marginRight="@dimen/ten_dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@mipmap/ic_options_done"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo"
            android:layout_marginTop="@dimen/five_dp"
            android:layout_marginLeft="@dimen/ten_dp"/>
    </LinearLayout>
</LinearLayout>